minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  type: ExternalName
  externalName: private.oci.kentaro1043.com
