minio/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`s3.kentaro1043.com`)
      services:
        - name: minio
          port: 9000

  tls:
    secretName: minio-tls
